--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <!-- Add a nav tag to wrap these nested links instead of a span-->
     <nav>
-      <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a> 
+      <a href="products.html">Products</a>
     </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
@@ -25,18 +27,18 @@
 
         <!-- Wrap the nested img in a figure tag-->
         <figure>
-          <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms"></figure>
+          <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
 
           <!-- Wrap this text in a figcaption tag so that it captions the image above-->
-          <figcaption>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
-        </section>
+          <figcaption> "An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
+        </figure>
 
         <!-- Turn this div into an article tag-->
         <article>
           <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
         </article>
-      </main>
+      </section>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
       <section>
@@ -50,7 +52,7 @@
           </video>
 
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
-          <figcaption>Exceptional Promotional Video - Source: archive.org</figcaption>
+          <figcaption>Exceptional Promotional Video - Source: archive.org</figcaption> 
         </figure>
       </section>
 
@@ -87,15 +89,15 @@
         Exceptional Realty<br>
         P.O.Box 5555<br>
         Brooklyn, NY 11201
-      </adress>
+      </address>
 
       <!-- Replace the following div with a details tag -->
-      <div>
+      <details>
         <!-- Replace the following span with a summary tag -->
-        <span>&copy; 2014 Exceptional Realty.</span>
+        <summary>&copy; 2014 Exceptional Realty.</summary> 
         <p>All Rights Reserved.</p>
-      </div>
-    </div>
+      </details>
+    </footer>
 
   </body>
 </html>
